<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/hello_world"
        android:id="@+id/hello"
        />

    <item
        android:title="@string/app_name"
        android:id="@+id/app"
        />

    <item
        android:title="@string/Exit"
        android:id="@+id/exit"
        />
    <item
        android:title="@string/download1"
        android:orderInCategory="1"
        android:id="@+id/download"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:iconTint="@color/teal_700"
        />

    <item
        android:title="@string/search"
        android:orderInCategory="2"
        android:id="@+id/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@color/teal_700"/>
</menu>